--- a/index.html.html
+++ b/index.html.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Chess Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="board"></div>
+#board {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    width: 400px;
+    height: 400px;
+}
 
-    <script src="chess.js"></script>
-</body>
-</html>
+.square {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #333;
+    box-sizing: border-box;
+}
+
+.piece {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
